# nornir-urd-two

./: .gitignore  README.md  metric_info_lunar.md  metric_info_midnight.md  metric_info_solar.md  pyproject.toml
.claude/: CLAUDE.md
.claude/plans/: 01_plan.md  02_plan.md  03_plan.md  05_plan.md  06_feasibility.md  06_phases.md  07_sequences.md
data/: legacy_data.csv
nornir_urd/: __init__.py  __main__.py  astro.py  cli.py  decluster.py  gcmt.py  ocean.py  pb2002.py  reasenberg.py  usgs.py
review/: 01_plan_review.md  03_plan_review.md  04_review_window.md  04b_gk_window_determination.md  05_window_req.md  06_data_analysis_reqs.md  info_lunar_review.md  info_solar_review.md  isc-gem_catalog_migration.md  legacy_data_report.md  no_open_quake.md  usgs_data_source.md
tests/: test_astro.py  test_cli.py  test_decluster.py  test_decluster_population.py  test_gcmt.py  test_ocean.py  test_pb2002.py  test_reasenberg.py  test_usgs.py  test_validation.py  test_window.py
validation/: legacy_comparison.csv  validate_legacy.py
